# python-demo

./: .gitignore  AGENTS.md  CLAUDE.md  NumPy.ipynb  dict_example.py  inherit_example.py  list_example.py  normalization.py  numpy_cosine_example.py  numpy_matrix_multiply_example.py  oop_example.py  pandas_clean_data.py  pandas_example.py  pandas_groupby_example.py  pandas_map_example.py  pandas_merge_example.py  pandas_onehot_example.py  pyproject.toml  standardization.py  vector_search.py
tmp/: multi-arr.npz
